# U19-pipeline-python

./: .gitignore  01-grants.sql  Dockerfile  README.md  cron_backup_u19_database.sh  dj_local_old.json  docker-compose-local.yml  docker-compose.yml  dump_prod.sh  initial_conf.py  pyproject.toml  requirements.txt  ruff.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
notebooks/: 00-Datajoint-configuration.ipynb  ERDs.ipynb  Marking_dead_mice_batch.ipynb  TestAlertSystem.ipynb  TestAutomaticPipeline.ipynb  ad_hoc_psychometrics_plot.ipynb  behavior_metrics_performance.ipynb  brightness_video_analysis.ipynb  check_pos_image_quality.ipynb  check_session_projector_crash.ipynb  create_tech_responsibilites_table.ipynb  create_weighingGUI_ss.ipynb  fetch_session_data.ipynb  imaging_storage_calculator.ipynb  insert_pupilometry_data_test.ipynb  live_stats_monitor.ipynb  numtrials_and_bias_check.ipynb  performance_metrics_2022.ipynb  psychometrics_plot-multiple_plots.ipynb  psychometrics_plot.ipynb  pupillometry.ipynb  pupillometry_final_notebook.ipynb  python_demo.ipynb  read_virmen_behavior_file.ipynb  session_crash_dates_rig1.csv  storage_calculator_across_time.ipynb  training_days_per_protocol.ipynb  water_weight_alert.ipynb  xyz_picks_notebook.ipynb
notebooks/developer_notebooks/: 00-Set-up-configuration.ipynb  01-ephys-workflow-structure.ipynb  01-imaging-workflow-structure.ipynb  02-process-imaging-workflow.ipynb  20251119_sync_v4.ipynb  Creating_the_Scheduling_Table.ipynb  brightness_video_analysis.ipynb  bulk_reprocess_ephys_recordings.ipynb  check_daq_signals_jorge.ipynb  check_sync_notebook-new_method.ipynb  check_sync_notebook-new_method3.ipynb  check_sync_notebook-new_method5.ipynb  delete_logs_periodically.ipynb  delete_old_live_session_stats.ipynb  query_for_tech_home_based_off_alvaros_big_query.ipynb  review_ephys_sync.ipynb
notebooks/ephys_element/: 00-Set-up-configuration.ipynb  01-ephys-workflow-structure.ipynb  02-process-ephys-workflow.ipynb  check_catgt_parameters_lfp.ipynb  check_sync_notebook-new_method-2.ipynb  check_sync_notebook-new_method.ipynb  check_sync_notebook.ipynb  ephys_element_workflow.ipynb  ephys_element_workflow.py  populate_sync_ephys_old_pipeline.ipynb  read_ephys_parameters.ipynb  reingest_missing_script.py  reingest_missing_sync_sessions2.ipynb  reingest_nan_sync_sessions.ipynb  reingest_sync_all_sessions_include_virmen_time.ipynb  reingest_sync_all_sessions_include_virmen_time_status.ipynb  reingest_sync_by_virmen_block.ipynb
notebooks/imaging_element/: 00-Set-up-configuration.ipynb  02-process-imaging-workflow.ipynb  04-automate-imaging.py  imaging_element_setup.ipynb  imaging_element_workflow.ipynb
notebooks/pupillometry_notebooks/: grade_pupillometry_processing.ipynb  pupillometry.ipynb  pupillometry_final_notebook.ipynb  review_pupillometry_data.ipynb  test_pupillometry_pipeline.ipynb
notebooks/tutorials/: 1-Explore U19 data pipeline with DataJoint.ipynb  2-Analyze data with U19 pipeline and save results.ipynb
princeton_env/include/: python3.7m
scripts/: automate_imaging_element.py  automate_imaging_element.slurm  call_cronjob_check_rig_maintenance.sh  check_rig_maintenance.py  conf_file_finding.py  create_schemas.py  drop_schemas.py  imaging_element.slurm  ingest_hdf5_to_db.py  make_demo_puffs_schemas.py  notify_unfinished_sessions.py  populate_imaging.py  rig_maintenance_demo.py  run_notify_unfinished_sessions.py
slurm_files/: slurm_real.slurm  test.py
tutorials/201910/: 0-Get DataJoint Ready.ipynb  1-Explore U19 data pipeline with DataJoint.ipynb  2-Analyze data with U19 pipeline and save results.ipynb
tutorials/202001/: 0-Get DataJoint Ready.ipynb  1-Build a simple data pipeline.ipynb  2-Explore U19 data pipeline with DataJoint.ipynb  3-Analyze data with U19 pipeline and save results.ipynb
u19_pipeline/: __init__.py  acquisition.py  action.py  behavior.py  copy_table.py  ephys.py  ephys_element.py  ephys_pipeline.py  ephys_rec.py  ephys_recording.py  ephys_sync.py  imaging.py  imaging_acq.py  imaging_element.py  imaging_pipeline.py  imaging_rec.py  imaging_recording.py  lab.py  lightsheet.py  meso.py  meso_analysis.py  microsocope.py  puffs.py  puffs_acquisition.py  puffs_behavior.py  puffs_lab.py  pupillometry.py  recording.py  recording_process.py  reference.py  rig_maintenance.py  scheduler.py  slurm_pupillometry.slurm  subject.py  task.py  utility.py
u19_pipeline/alert_system/: alert_code_skeleton.py  alert_system_utility.py  behavior_metrics.py  call_cronjob_alert.sh  cronjob_alert.py  main_alert_system.py
u19_pipeline/automatic_job/: call_cronjob_automatic_job.sh  call_cronjob_script.sh  call_populate_missing_syncbehavior.sh  call_pupillometry_check_jobs.sh  call_pupillometry_queue_jobs.sh  clusters_paths_and_transfers.py  create_missing_lfps_script.py  (+24 more)
useful_queries/: check_missing_behavior.sql  get_subject_data.sql  get_subject_data2.sql  reset_foreign_keys.sql
utils/: is_this_spock.py
(+100 files in other folders)
