[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "u19-pipeline"
version = '0.3.6'
description = "Datajoint schemas for Princeton U19"
readme = "README.md"
authors = [
    { name = "DataJoint", email = "support@datajoint.com" },
    { name = "Christian Tabedzki", email = "ct5868@princeton.edu" },
]
dependencies = [
    "astropy>=6.0",
    "bitstring",
    "datajoint>=0.14.2",
    "fair-research-login",
    "numpy>=1.23",
    "pandas>=2.0",
    "python-dotenv>=0.20",
    "scikit-image",
    "scipy",
    "suite2p",
    "tables>=3.8",
    "tifffile",
]
requires-python = ">=3.10"

[project.optional-dependencies]
pipeline = [
    "jupyterlab>=4.3.4",
    "cellpose",
    "ecephys_spike_sorting @ git+https://github.com/jenniferColonell/ecephys_spike_sorting.git",
    "element-array-ephys @ git+https://github.com/BrainCOGS/element-array-ephys.git",
    "element-calcium-imaging @ git+https://github.com/BrainCOGS/element-calcium-imaging.git",
    "element-interface @ git+https://github.com/datajoint/element-interface.git",
    "ecephys-spike-sorting>=0.1.0",
    "paramiko",
    "psutil",
    "scp",
    "scanreader @ git+https://github.com/atlab/scanreader.git",
    "six",
]

[tool.setuptools]
packages = {find = {include = ["u19_pipeline*", "scripts*"]}}


[tool.hatch.version]
path = "scripts/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/scripts",
    "/u19_pipeline",
]

