[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "u19-pipeline"
version = '0.3.6'
description = "Datajoint schemas for Princeton U19"
readme = "README.md"
authors = [
    { name = "DataJoint", email = "support@datajoint.com" },
    { name = "Christian Tabedzki", email = "ct5868@princeton.edu" },
]
dependencies = [
    "datajoint>=0.14.2",
    "icalevents>=0.3.0",
    "numpy>=1.23",
    "pandas>=2.0",
    "python-dotenv>=0.20",
    "scikit-image",
    "scipy",
    "tables>=3.8",
    "astropy>=6.0",
]
requires-python = ">=3.12"

[project.optional-dependencies]
analysis = [
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "plotly>=5.14",
    "jupyterlab>=4.3.4",
]
pipeline = [
    "cellpose",
    "bitstring",
    "fair-research-login",
    "ecephys_spike_sorting @ git+https://github.com/jenniferColonell/ecephys_spike_sorting.git",
    "element-array-ephys @ git+https://github.com/BrainCOGS/element-array-ephys.git",
    "element-calcium-imaging @ git+https://github.com/BrainCOGS/element-calcium-imaging.git",
    "element-interface @ git+https://github.com/datajoint/element-interface.git",
    "ecephys-spike-sorting>=0.1.0",
    "paramiko",
    "psutil",
    "scp",
    "scanreader @ git+https://github.com/atlab/scanreader.git",
    "six",
    "suite2p",
    "tifffile",
]

[tool.setuptools]
packages = {find = {include = ["u19_pipeline*", "scripts*"]}}


[tool.hatch.version]
path = "scripts/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/scripts",
    "/u19_pipeline",
]

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.9.10",
    "setuptools>=75.8.0"
]
